MDEV-5884: EXPLAIN UPDATE ... ORDER BY LIMIT shows wrong #rows - Make get_index_for_order() return correct #rows.   changed EXPLAIN outputs are checked - only #rows is different.